--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body,
+app-root { /* Adicionando app-root para garantir */
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: block; // Garante que o app-root se comporte como um bloco
+}
