--- a/src/app/modules/global/pages/home/home.html
+++ b/src/app/modules/global/pages/home/home.html
@@ -1,2 +1,12 @@
 <app-header></app-header>
-<h1>aaa</h1>
+<div class="card home-container">
+  <div class="home-content">
+    <header class="home-header">
+      <h1>Meu Portfólio de Projetos</h1>
+      <p class="subtitle">
+        Uma coleção de projetos para demonstrar minhas habilidades em desenvolvimento back-end,
+        todos integrados a este front-end em Angular.
+      </p>
+    </header>
+  </div>
+</div>
