--- a/src/app/modules/global/components/header/header.scss
+++ b/src/app/modules/global/components/header/header.scss
@@ -1,9 +1,13 @@
 .card {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
   background-color: #e6e3e3;
-  padding: 1.2rem;
+  padding: 1rem 1.5rem;
+  height: 11%;
   text-align: center;
   display: flex;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
   flex-direction: column;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
 }
