--- a/src/app/modules/global/components/sidebar/sidebar.html
+++ b/src/app/modules/global/components/sidebar/sidebar.html
@@ -9,17 +9,39 @@
 <p-drawer 
   header="Menu Principal" 
   [(visible)]="visible" 
-  [style]="{ width: '280px' }">
+  [style]="{ width: '350px' }">
   
-  <ul class="menu-list">
-    <li (click)="onMenuItemClick()">
-      <i class="pi pi-home"></i>
-      <span>Início</span>
-    </li>
-    <li (click)="onMenuItemClick()">
-      <i class="pi pi-cog"></i>
-      <span>Configurações</span>
-    </li>
-  </ul>
+  <div class="overflow-y-auto">
+    <ul class="list-none p-3 m-0">
+      <li>
+        <div
+          pRipple
+          pStyleClass="@next"
+          enterFromClass="hidden"
+          enterActiveClass="slidedown"
+          leaveToClass="hidden"
+          leaveActiveClass="slideup"
+          class="p-3 flex align-items-center justify-content-between text-600 cursor-pointer p-ripple"
+        >
+          <span class="font-medium">Projetos</span>
+          <i class="pi pi-chevron-down"></i>
+        </div>
+        <ul class="menu-list">
+          <li>
+            <a  (click)="navigateTo('/products')" pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
+              <i class="pi pi-box mr-2"></i>
+              <span class="font-medium">Dashboard de Produtos</span>
+            </a>
+          </li>
+          <li>
+            <a (click)="navigateTo('/home')" pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
+              <i class="pi pi-home mr-2"></i>
+              <span class="font-medium">Home</span>
+            </a>
+          </li>
+    </ul>
+      </li>
+    </ul>
+  </div>
   
 </p-drawer>
