fix: was fixed card padding

--- a/src/app/modules/products/pages/dashboard/dashboard.scss
+++ b/src/app/modules/products/pages/dashboard/dashboard.scss
@@ -10,7 +10,7 @@
   }
 
   .p-card-content {
-    padding: 0;
+    padding: 2rem;
     display: grid;
     grid-template-columns: 280px 1fr;
     gap: 2rem;
