feat: added theme button

--- a/src/app/modules/global/components/sidebar/sidebar.html
+++ b/src/app/modules/global/components/sidebar/sidebar.html
@@ -43,5 +43,9 @@
       </li>
     </ul>
   </div>
+
+  <div class="button-theme">
+    <app-button-theme></app-button-theme>
+  </div>
   
 </p-drawer>
