--- a/src/app/modules/global/components/header/header.scss
+++ b/src/app/modules/global/components/header/header.scss
@@ -1,11 +1,11 @@
 .card {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-  background-color: #e6e3e3;
   padding: 1rem 1.5rem;
   height: 11%;
   text-align: center;
   display: flex;
   position: sticky;
+  border: solid 1px #5e5d5d;
   top: 0;
   z-index: 1000;
   flex-direction: column;
