--- a/src/app/modules/products/pages/dashboard/dashboard.scss
+++ b/src/app/modules/products/pages/dashboard/dashboard.scss
@@ -1,7 +1,9 @@
 .dashboard-container {
   padding: 2rem;
-  background-color: #f8f9fa;
   min-height: 100vh;
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 ::ng-deep .dashboard-card {
@@ -20,7 +22,6 @@
 .filter-sidebar {
   padding: 1.5rem;
   border-right: 1px solid #dee2e6;
-  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   gap: 1.75rem;
@@ -29,7 +30,6 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     margin: 0 0 1rem 0;
     font-size: 1.5rem;
-    color: #343a40;
     display: flex;
     align-items: center;
     gap: 0.5rem;
@@ -52,7 +52,6 @@
     margin: 0;
     font-size: 1rem;
     font-weight: 600;
-    color: #495057;
   }
 }
 
@@ -61,7 +60,6 @@
   display: flex;
   justify-content: space-between;
   margin-top: 0.5rem;
-  color: #6c757d;
   font-size: 0.9rem;
 }
 
@@ -74,8 +72,6 @@
 :host ::ng-deep {
 
   .p-datatable .p-datatable-thead > tr > th {
-    background-color: #f2f2f2; 
-    color: #333;
     font-weight: 600;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     border-bottom: 2px solid #dee2e6;
@@ -109,7 +105,6 @@
   .p-datatable .p-datatable-tbody > tr > td {
         border-bottom: 1px solid #dee2e6;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-        color: #495057;
         text-align: left;
     }
   
@@ -120,10 +115,6 @@
   .p-datatable .p-datatable-tbody td button:last-child {
     margin-right: 0;
   }
-  
-  .p-datatable-tbody > tr:hover {
-    background: #f7f7f7;
-  }
 
   .p-datatable-tbody > tr:last-child > td {
           border-bottom: none;
@@ -131,6 +122,7 @@
 
     .p-dialog .p-field {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+    padding-top: 1rem;
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
@@ -140,7 +132,6 @@
   .p-dialog .p-field label {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     font-weight: 600;
-    color: #495057;
   }
 
   .p-dialog .p-fluid .p-field:last-of-type {
@@ -148,10 +139,10 @@
   }
   
   .p-dialog .p-dialog-header {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     font-weight: 600;
     font-size: 1.25rem;
     padding: 1.25rem;
-    background-color: #f7f9fc;
     border-bottom: 1px solid #dee2e6;
   }
   
