was made auth service and guard routes

--- a/src/app/modules/global/components/sidebar/sidebar.html
+++ b/src/app/modules/global/components/sidebar/sidebar.html
@@ -46,6 +46,7 @@
 
   <div class="button-theme">
     <app-button-theme></app-button-theme>
+    <button pButton type="button" label="Sair" icon="pi pi-sign-out" severity="danger" (click)="signout()"></button>
   </div>
   
 </p-drawer>
