--- a/src/app/modules/global/components/button-theme/button-theme.html
+++ b/src/app/modules/global/components/button-theme/button-theme.html
@@ -1,4 +1,4 @@
-<div class="card flex justify-content-center align-items-center p-3">
+<div class="card flex justify-content-center align-items-center w-full">
   <p-toggleButton 
     [(ngModel)]="isDarkMode"
     (onChange)="toggleLightDark()"
