feat: was made blog

--- a/src/app/modules/global/components/sidebar/sidebar.html
+++ b/src/app/modules/global/components/sidebar/sidebar.html
@@ -39,6 +39,12 @@
               <span class="font-medium">Home</span>
             </a>
           </li>
+          <li>
+            <a (click)="navigateTo('/blog')" pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
+              <i class="pi pi-book mr-2"></i>
+              <span class="font-medium">Blog</span>
+            </a>
+          </li>
     </ul>
       </li>
     </ul>
