--- a/src/app/modules/global/components/sidebar/sidebar.scss
+++ b/src/app/modules/global/components/sidebar/sidebar.scss
@@ -9,10 +9,8 @@
   display: flex;
   justify-content: space-between;
   padding-left: 20px;
-  padding-right: 20px;
+  padding-right: 20px !important;
   margin-bottom: 10px;
-  margin-right: 10px;
-  
 }
 
 .container {
