--- a/src/app/modules/products/pages/dashboard/dashboard.html
+++ b/src/app/modules/products/pages/dashboard/dashboard.html
@@ -87,7 +87,7 @@
             <ng-template pTemplate="caption">
                 <div class="table-caption-container">
                     <h3 class="table-title">Dashboard de produtos</h3>
-                    <button pButton type="button" label="Adicionar Produto" (click)="showAddProductDialog()" icon="pi pi-plus"></button>
+                    <button pButton type="button" label="Adicionar Produto" (click)="showAddProductDialog()" icon="pi pi-plus" severity="success"></button>
                 </div>
             </ng-template>
 
