--- a/src/app/modules/global/components/header/header.scss
+++ b/src/app/modules/global/components/header/header.scss
@@ -1,23 +1,20 @@
 .card {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-  padding: 1rem 1.5rem;
-  height: 11%;
+  min-height: 80px;
   text-align: center;
   display: flex;
   position: sticky;
-  border: solid 1px #5e5d5d;
   top: 0;
   z-index: 1000;
-  flex-direction: column;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
 }
 
 ::ng-deep .p-toolbar {
-  border: none !important;
-  padding: 0 !important;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 60px;
   justify-content: flex-start;
-
-  .p-toolbar-group-start {
-    width: 100%;
-  }
+  width: 100%;
+  border: solid 1px #5e5d5d;
+  backdrop-filter: blur(10px);
 }
