--- a/src/app/modules/global/components/header/header.scss
+++ b/src/app/modules/global/components/header/header.scss
@@ -6,6 +6,7 @@
   position: sticky;
   top: 0;
   z-index: 1000;
+  width: 100%;
 }
 
 ::ng-deep .p-toolbar {
@@ -17,4 +18,46 @@
   width: 100%;
   border: solid 1px #5e5d5d;
   backdrop-filter: blur(10px);
+}
+
+/* Responsividade para tablets */
+@media (max-width: 768px) {
+  .card {
+    min-height: 70px;
+  }
+
+  ::ng-deep .p-toolbar {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 15px;
+    padding-bottom: 50px;
+  }
+}
+
+/* Responsividade para smartphones */
+@media (max-width: 480px) {
+  .card {
+    min-height: 60px;
+  }
+
+  ::ng-deep .p-toolbar {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 40px;
+  }
+}
+
+/* Responsividade para telas muito pequenas */
+@media (max-width: 320px) {
+  .card {
+    min-height: 50px;
+  }
+
+  ::ng-deep .p-toolbar {
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 8px;
+    padding-bottom: 35px;
+  }
 }
