feat: was made user greetings in header

--- a/src/app/modules/global/components/sidebar/sidebar.html
+++ b/src/app/modules/global/components/sidebar/sidebar.html
@@ -13,7 +13,7 @@
   
   <div class="overflow-y-auto">
     <ul class="list-none p-3 m-0">
-      <li>
+      <li class="home-link">
             <a (click)="navigateTo('/home')" pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
               <i class="pi pi-home mr-2"></i>
               <span class="font-medium">Home</span>
