--- a/src/app/modules/global/components/header/header.scss
+++ b/src/app/modules/global/components/header/header.scss
@@ -13,11 +13,16 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 20px;
-  padding-bottom: 60px;
-  justify-content: flex-start;
+  padding-bottom: 30px;
+  justify-content: space-between;
   width: 100%;
   border: solid 1px #5e5d5d;
   backdrop-filter: blur(10px);
+}
+
+.user{
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 
 /* Responsividade para tablets */
@@ -30,7 +35,7 @@
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 15px;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
   }
 }
 
