--- a/src/app/modules/global/components/sidebar/sidebar.scss
+++ b/src/app/modules/global/components/sidebar/sidebar.scss
@@ -12,9 +12,27 @@
   box-sizing: border-box;
 }
 
+.home-link{
+
+  transition: background-color 0.2s ease, color 0.2s ease;
+  transition: all 0.2s ease-in-out;
+  
+  &:hover {
+      color: #b2b2b4;
+      transform: translateX(4px);
+    }
+}
+
 .logout-button {
   margin-left: auto;
 }
+
+.pi {
+      font-size: 1.2rem;
+      margin-right: 1rem;
+      min-width: 24px; 
+      text-align: center;
+    }
 
 ::ng-deep .p-drawer-title{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
