--- a/src/app/modules/global/components/header/header.html
+++ b/src/app/modules/global/components/header/header.html
@@ -8,7 +8,7 @@
     </ng-template>
 
     <ng-template pTemplate="end">
-      <span class="user"> Bem-Vindo(a), {{userDetails.user?.username}} <p-avatar shape="circle" label="{{userDetails.user?.username.charAt(0)}}" size="large"></p-avatar></span>
+      <span class="user"> Bem-Vindo(a), {{userDetails.user?.username}} <p-avatar shape="circle" label="{{userDetails.user?.username.charAt(0).toUpperCase()}}" size="large"></p-avatar></span>
     </ng-template>
   </p-toolbar>
 </div>
