--- a/src/app/modules/todo/pages/todo/todo.html
+++ b/src/app/modules/todo/pages/todo/todo.html
@@ -1,19 +1,5 @@
 <app-header></app-header>
 
-<p-dialog header="Adicionar Tarefa" [(visible)]="displayAddDialog" [modal]="true" [closable]="true" [style]="{width: '400px'}">
-    <div class="p-fluid">
-        <div class="p-field">
-            <label for="description">Descrição da Tarefa</label>
-            <input id="description" type="text" pInputText  placeholder="Descrição da Tarefa" [(ngModel)]="newTodo.description" />
-        </div>
-    </div>
-
-    <ng-template pTemplate="footer">
-        <button pButton type="button" label="Cancelar" icon="pi pi-times" (click)="displayAddDialog=false" class="p-button-text"></button>
-        <button pButton type="button" label="Salvar" icon="pi pi-check" (click)="addTodo()"></button>
-    </ng-template>
-</p-dialog>
-
 <p-dialog header="Editar Tarefa" [(visible)]="displayEditDialog" [modal]="true" [closable]="true" [style]="{width: '400px'}">
     <div class="p-fluid">
         <div class="p-field">
@@ -36,16 +22,15 @@
         <p-card class="todo-card">
             <ng-template pTemplate="header">
                 <div class="header-content">
-                    <button pButton type="button" label="Adicionar Tarefa" icon="pi pi-plus" (click)="onOpenAddDialog()" severity="success"></button>
+                    <input type="text" pInputText placeholder="Adicionar tarefa" [(ngModel)]="newTodo.description" (input)="onTodoInput()" class="todo-input" />
                 </div>
             </ng-template>
             <ul class="todo-list">
                 @for(todo of todos; track todo._id){
-                    <li class="todo-item">
-                        <p-checkbox [ngModel]="todo.completed" (onChange)="toggleTodo(todo._id)" [binary]="true"></p-checkbox>
+                    <li class="todo-item" (click)="toggleTodo(todo._id)">
                         <span [ngClass]="{'completed': todo.completed}">{{ todo.description }}</span>
-                        <button pButton type="button" icon="pi pi-pencil" severity="success" label="Editar" (click)="onOpenEditDialog(todo._id)" ></button>
-                        <button pButton type="button" icon="pi pi-trash" severity="danger" label="Excluir" (click)="deleteTodo(todo._id)" ></button>
+                        <button pButton type="button" icon="pi pi-pencil" severity="success" (click)="onOpenEditDialog(todo._id)" ></button>
+                        <button pButton type="button" icon="pi pi-trash" severity="danger" (click)="deleteTodo(todo._id); $event.stopPropagation()" ></button>
                     </li>
                 }
             </ul>
