feat: was made home page

--- a/src/app/modules/global/components/sidebar/sidebar.html
+++ b/src/app/modules/global/components/sidebar/sidebar.html
@@ -46,6 +46,17 @@
             </a>
           </li>
           <li>
+            <a (click)="navigateTo('/transactions')" pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
+              <i class="pi pi-book mr-2"></i>
+              <span class="font-medium">Controle Financeiro</span>
+            </a>
+          </li>
+          <li>
+            <a (click)="navigateTo('/imc')" pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
+              <i class="pi pi-heart mr-2"></i>
+              <span class="font-medium">Calculadora IMC</span>
+            </a>
+          <li>
             <a (click)="navigateTo('/todos')" pRipple class="flex items-center cursor-pointer p-4 rounded-border text-surface-700 dark:text-surface-100 hover:bg-surface-100 dark:hover:bg-surface-700 duration-150 transition-colors p-ripple">
               <i class="pi pi-check-square mr-2"></i>
               <span class="font-medium">Todo List</span>
