--- a/src/app/modules/products/pages/dashboard/dashboard.scss
+++ b/src/app/modules/products/pages/dashboard/dashboard.scss
@@ -112,6 +112,8 @@
 
 
   .p-datatable .p-datatable-tbody > tr > td {
+        border-top: 1px solid #dee2e6;
+        font-size: 1.5rem;
         border-bottom: 1px solid #dee2e6;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
         text-align: left;
@@ -163,6 +165,10 @@
     padding: 1.25rem;
     border-top: 1px solid #dee2e6;
   }
+}
+
+.cash-color{
+  color: green;
 }
 
 /* Responsive Design - Media Queries */
